package seedu.address.logic.commands;

import static java.util.Objects.requireNonNull;

import java.util.Objects;

import seedu.address.commons.util.ToStringBuilder;

/**
 * Represents the result of a command execution.
 */
public class CommandResult {

    private final String feedbackToUser;

    /** Help information should be shown to the user. */
    private final boolean showHelp;

    /** The application should exit. */
    private final boolean exit;

    /**
     * Constructs a {@code CommandResult} with the specified fields.
     */
    public CommandResult(String feedbackToUser, boolean showHelp, boolean exit) {
        this.feedbackToUser = requireNonNull(feedbackToUser);
        this.showHelp = showHelp;
        this.exit = exit;
    }

    /**
     * Constructs a {@code CommandResult} with the specified {@code feedbackToUser},
     * and other fields set to their default value.
     */
    public CommandResult(String feedbackToUser) {
        this(feedbackToUser, false, false);
    }

    public String getFeedbackToUser() {
        return feedbackToUser;
    }

    public boolean isShowHelp() {
        return showHelp;
    }

    public boolean isExit() {
        return exit;
    }

    @Override
    public boolean equals(Object other) {
        if (other == this) {
            return true;
        }

        // instanceof handles nulls
        if (!(other instanceof CommandResult)) {
            return false;
        }

        CommandResult otherCommandResult = (CommandResult) other;
        return feedbackToUser.equals(otherCommandResult.feedbackToUser)
                && showHelp == otherCommandResult.showHelp
                && exit == otherCommandResult.exit;
    }

    @Override
    public int hashCode() {
        return Objects.hash(feedbackToUser, showHelp, exit);
    }

    @Override
    public String toString() {
        return new ToStringBuilder(this)
                .add("feedbackToUser", feedbackToUser)
                .add("showHelp", showHelp)
                .add("exit", exit)
                .toString();
    }

    public boolean isView() {
        return this.feedbackToUser.contains("Listed all students in");
    }

    public boolean isList() {
        return this.feedbackToUser.contains("Listed all classes");
    }

    public boolean isEditClass() {
        return this.feedbackToUser.contains("Edited Class:");
    }

    public boolean isUpdatedStudent() {
        return this.feedbackToUser.contains("Edited Student:")
                || this.feedbackToUser.contains("started a new lesson!")
                || this.feedbackToUser.contains("Successfully marked all students in")
                || this.feedbackToUser.contains("Successfully unmarked all students in")
                || this.feedbackToUser.contains("has been marked absent!")
                || this.feedbackToUser.contains("sucessfully marked present!")
                || this.feedbackToUser.contains("Added New Student:")
                || this.feedbackToUser.contains("has been removed from")
                || this.feedbackToUser.contains("Successfully set the number of lessons in");
    }
}
